# OCR

./: .gitignore  README.md  index.html  install_helper_protocol.cmd  pyproject.toml  start_local_parser.ps1  start_ocr_app.cmd  start_ocr_app.ps1  start_ocr_protocol.cmd
docs/: project-map.md  ui-rules.md
src/ocr_parser/: __init__.py  cli.py  local_server.py  models.py  parser.py
tests/: test_parser.py
tools/: build-helper-package.ps1  export_ppt_slides.ps1  register-ocr-protocol.ps1  remove-legacy-ocr-workspace.ps1  use-my-works-workspace.ps1
